tests/ui/type-fn-eof.stderr
error: no rules expected the token `fn`
 --> $DIR/type-fn-eof.rs:6:16
  |
6 |     input = [{ fn }]
  |                ^^

error: aborting due to previous error

